Expand data model to serve all pages.

--- a/src/data/Company.yml
+++ b/src/data/Company.yml
@@ -1,4 +1,4 @@
-title: Contact
+title: Company
 items:
   - description: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
