--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -1,4 +1,4 @@
-title: Contact
+title: Home
 items:
   - description: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
