--- a/src/data/Services.yml
+++ b/src/data/Services.yml
@@ -1,4 +1,4 @@
-title: Contact
+title: Services
 items:
   - description: >-
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
