--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,7 +39,7 @@ collections:
               - { label: "Description", name: "description", widget: "text" }
 
       - name: "hero"
-        label: "Heros"
+        label: "Heroes"
         file: "src/data/Hero.yml"
         fields:
           - { label: "Title", name: "title", widget: "string", default: "Hero" }
@@ -55,6 +55,46 @@ collections:
               - { label: "Image", name: "imagePath", widget: "string" }
               - { label: "Caption", name: "imageCaption", widget: "string" }
               - { label: "Sub-Caption", name: "subCaption", widget: "string" }
+
+      - name: "block"
+          label: "Content Blocks"
+          file: "src/data/Block.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Content Block" }
+            - name: "items"
+              id: "id"
+              label: "Items"
+              widget: "list"
+              fields:
+                - { label: "Title", name: "title", widget: "string" }
+                - { label: "Subtitle", name: "subtitle", widget: "string" }
+                - { label: "Description", name: "description", widget: "text" }
+                - { label: "Link", name: "link", widget: "string" }
+                - { label: "LinkText", name: "linkText", widget: "string" }
+                - { label: "Image", name: "imagePath", widget: "string" }
+                - { label: "Caption", name: "imageCaption", widget: "string" }
+                - { label: "Sub-Caption", name: "subCaption", widget: "string" }
+
+      - name: "testimonials"
+          label: "Testimonials"
+          file: "src/data/Testimonial.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Testimonial Block" }
+            - name: "items"
+              id: "id"
+              label: "Items"
+              widget: "list"
+              fields:
+                - { label: "Title", name: "title", widget: "string" }
+                - { label: "Subtitle", name: "subtitle", widget: "string" }
+                - { label: "Description", name: "description", widget: "text" }
+                - { label: "Reviewed By", name: "reviewedBy", widget: "string" }
+                - { label: "Position", name: "reviewedByPosition", widget: "string" }
+                - { label: "Link", name: "link", widget: "string" }
+                - { label: "LinkText", name: "linkText", widget: "string" }
+                - { label: "Image", name: "imagePath", widget: "string" }
+                - { label: "Caption", name: "imageCaption", widget: "string" }
+                - { label: "Sub-Caption", name: "subCaption", widget: "string" }
 
       - name: "company"
         label: "Company"
