--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,7 +21,7 @@ collections:
       - { label: "body", name: "body", widget: "markdown" }
 
   - name: "data"
-    label: "Data"
+    label: "Pages"
     files:
       - name: "general"
         label: "General"
@@ -98,83 +98,86 @@ collections:
               - { label: "Summary", name: "summary", widget: "text" }
               - { label: "Image", name: "image", widget: "string" }
 
-  - name: "hero"
-    label: "Heroes"
-    file: "src/data/Hero.yml"
-    fields:
-      - { label: "Title", name: "title", widget: "string", default: "Hero" }
-      - name: "items"
-        label: "Items"
-        widget: "list"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Subtitle", name: "subtitle", widget: "string" }
-          - { label: "Description", name: "description", widget: "text" }
-          - { label: "Link", name: "link", widget: "string" }
-          - { label: "LinkText", name: "linkText", widget: "string" }
-          - { label: "Image", name: "imagePath", widget: "string" }
-          - { label: "Caption", name: "imageCaption", widget: "string" }
-          - { label: "Sub-Caption", name: "subCaption", widget: "string" }
+  - name: "widgets"
+      label: "Widgets"
+      files:
+        - name: "hero"
+          label: "Heroes"
+          file: "src/data/Hero.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Hero" }
+            - name: "items"
+              label: "Items"
+              widget: "list"
+              fields:
+                - { label: "Title", name: "title", widget: "string" }
+                - { label: "Subtitle", name: "subtitle", widget: "string" }
+                - { label: "Description", name: "description", widget: "text" }
+                - { label: "Link", name: "link", widget: "string" }
+                - { label: "LinkText", name: "linkText", widget: "string" }
+                - { label: "Image", name: "imagePath", widget: "string" }
+                - { label: "Caption", name: "imageCaption", widget: "string" }
+                - { label: "Sub-Caption", name: "subCaption", widget: "string" }
 
-  - name: "block"
-    label: "Content Blocks"
-    file: "src/data/Block.yml"
-    fields:
-      - { label: "Title", name: "title", widget: "string", default: "Content Block" }
-      - name: "items"
-        id: "id"
-        label: "Items"
-        widget: "list"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Subtitle", name: "subtitle", widget: "string" }
-          - { label: "Description", name: "description", widget: "text" }
-          - { label: "Link", name: "link", widget: "string" }
-          - { label: "LinkText", name: "linkText", widget: "string" }
-          - { label: "Image", name: "imagePath", widget: "string" }
-          - { label: "Caption", name: "imageCaption", widget: "string" }
-          - { label: "Sub-Caption", name: "subCaption", widget: "string" }
+        - name: "block"
+          label: "Content Blocks"
+          file: "src/data/Block.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Content Block" }
+            - name: "items"
+              id: "id"
+              label: "Items"
+              widget: "list"
+              fields:
+                - { label: "Title", name: "title", widget: "string" }
+                - { label: "Subtitle", name: "subtitle", widget: "string" }
+                - { label: "Description", name: "description", widget: "text" }
+                - { label: "Link", name: "link", widget: "string" }
+                - { label: "LinkText", name: "linkText", widget: "string" }
+                - { label: "Image", name: "imagePath", widget: "string" }
+                - { label: "Caption", name: "imageCaption", widget: "string" }
+                - { label: "Sub-Caption", name: "subCaption", widget: "string" }
 
-  - name: "testimonials"
-    label: "Testimonials"
-    file: "src/data/Testimonial.yml"
-    fields:
-      - { label: "Title", name: "title", widget: "string", default: "Testimonial Block" }
-      - name: "items"
-        id: "id"
-        label: "Items"
-        widget: "list"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Subtitle", name: "subtitle", widget: "string" }
-          - { label: "Description", name: "description", widget: "text" }
-          - { label: "Reviewed By", name: "reviewedBy", widget: "string" }
-          - { label: "Position", name: "reviewedByPosition", widget: "string" }
-          - { label: "Link", name: "link", widget: "string" }
-          - { label: "LinkText", name: "linkText", widget: "string" }
-          - { label: "Image", name: "imagePath", widget: "string" }
-          - { label: "Caption", name: "imageCaption", widget: "string" }
-          - { label: "Sub-Caption", name: "subCaption", widget: "string" }
-          -
-  - name: "socialmedia"
-    label: "Social Media"
-    file: "src/data/SocialMedia.yml"
-    fields:
-      - { label: "Title", name: "title", widget: "string", default: "Social Media" }
-      - name: "items"
-        label: "Social Media"
-        widget: "list"
-        fields:
-          - { label: "Name", name: "name", widget: "string" }
-          - { label: "URL", name: "url", widget: "string" }
+        - name: "testimonials"
+          label: "Testimonials"
+          file: "src/data/Testimonial.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Testimonial Block" }
+            - name: "items"
+              id: "id"
+              label: "Items"
+              widget: "list"
+              fields:
+                - { label: "Title", name: "title", widget: "string" }
+                - { label: "Subtitle", name: "subtitle", widget: "string" }
+                - { label: "Description", name: "description", widget: "text" }
+                - { label: "Reviewed By", name: "reviewedBy", widget: "string" }
+                - { label: "Position", name: "reviewedByPosition", widget: "string" }
+                - { label: "Link", name: "link", widget: "string" }
+                - { label: "LinkText", name: "linkText", widget: "string" }
+                - { label: "Image", name: "imagePath", widget: "string" }
+                - { label: "Caption", name: "imageCaption", widget: "string" }
+                - { label: "Sub-Caption", name: "subCaption", widget: "string" }
+                -
+        - name: "socialmedia"
+          label: "Social Media"
+          file: "src/data/SocialMedia.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Social Media" }
+            - name: "items"
+              label: "Social Media"
+              widget: "list"
+              fields:
+                - { label: "Name", name: "name", widget: "string" }
+                - { label: "URL", name: "url", widget: "string" }
 
-  - name: "contact"
-    label: "Contact"
-    file: "src/data/Contact.yml"
-    fields:
-      - { label: "Title", name: "title", widget: "string", default: "Contact" }
-      - { label: "Meta Keywords", name: "metaKeywords", widget: "string" }
-      - { label: "Meta Description", name: "metaDescription", widget: "text" }
-      - { label: "Summary", name: "summary", widget: "text" }
-      - { label: "Description", name: "description", widget: "text" }
+        - name: "contact"
+          label: "Contact"
+          file: "src/data/Contact.yml"
+          fields:
+            - { label: "Title", name: "title", widget: "string", default: "Contact" }
+            - { label: "Meta Keywords", name: "metaKeywords", widget: "string" }
+            - { label: "Meta Description", name: "metaDescription", widget: "text" }
+            - { label: "Summary", name: "summary", widget: "text" }
+            - { label: "Description", name: "description", widget: "text" }
 
