Split hero, section blocks and content blocks on home page out into reusable components. Still remaining to do are testimonials and the 'how to get started' section.

--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -5,10 +5,10 @@ items:
       tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
       veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
       commodo consequat.
-    title: Lorem ipsum dolor
+    title: Firebrand is your trusted provider for accelerated mobile websites and marketing solutions
     subtitle: consectetur adipiscing elit
     link: /
     linkText: Learn More
     image: test.png
-    Caption: Incididunt ut labore
+    caption: Incididunt ut labore
     subCaption: Quis nostrud exercitation
