Split testimonial blocks on home page out into a reuseable component.

--- a/src/data/Block.yml
+++ b/src/data/Block.yml
@@ -10,5 +10,5 @@ items:
     link: /
     linkText: Learn More
     image: test.png
-    Caption: Incididunt ut labore
+    caption: Incididunt ut labore
     subCaption: Quis nostrud exercitation
