--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -1,12 +1,18 @@
 title: Hero Items
 items:
-  - id: homepage-hero
-    title: Firebrand is your trusted provider for accelerated mobile websites and marketing solutions
-    subtitle:
+  - caption: Vicki Li
     description: >-
-      Are you looking for more engagement from your online content?  Times have changed &ndash; providing superior mobile and in-app social media experiences is now more important than linking back to traditional websites.  We specialize in ultra-fast mobile-optimized pages, helping you to engage with the right clients and convert more leads!
+      Test. Are you looking for more engagement from your online content?  Times
+      have changed &ndash; providing superior mobile and in-app social media
+      experiences is now more important than linking back to traditional
+      websites.  We specialize in ultra-fast mobile-optimized pages, helping you
+      to engage with the right clients and convert more leads!
+    id: homepage-hero
+    image: /images/hero-realtor.png
     link: /services
     linkText: Learn More
-    image: /images/hero-realtor.png
-    caption: Vicki Li
     subCaption: Realtor
+    subtitle: Test
+    title: >-
+      Firebrand is your trusted provider for accelerated mobile websites and
+      marketing solutions
