--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -25,7 +25,7 @@ items:
     linkText: ""
     image: /images/digital-marketing-testimonial-person.png
   - testimonial: >-
-      Firebrand designed and implemented an amazing website for our business. Firebrand managed to combine the effective elements of a solid technical design with the functionality and visual appeal to engage our customers. We've seen an immediate increase in sales and flow through business.
+      Firebrand designed and implemented an amazing website for our business, combining the effective elements of a solid technical design with the functionality and visual appeal to engage our customers. We've seen an immediate increase in sales and flow through business.
     reviewedBy: Greg L.
     position: Owner
     organization: Jimmy Poblanos
