--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -52,15 +52,16 @@ collections:
             widget: "list"
             fields:
               - { label: "Title", name: "title", widget: "string" }
-
               - { label: "Summary", name: "summary", widget: "text" }
               - { label: "Description", name: "description", widget: "text" }
+              - { label: "Link", name: "link", widget: "string" }
+              - { label: "Link Text", name: "linkText", widget: "string" }
           - name: "processSteps"
-              label: "Process Steps"
-              widget: "list"
-              fields:
-                - { label: "Title", name: "title", widget: "string" }
-                - { label: "Description", name: "description", widget: "text" }
+            label: "Process Steps"
+            widget: "list"
+            fields:
+              - { label: "Title", name: "title", widget: "string" }
+              - { label: "Description", name: "description", widget: "text" }
 
       - name: "company"
         label: "Company"
@@ -140,7 +141,7 @@ collections:
               - { label: "Subtitle", name: "subtitle", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
               - { label: "Link", name: "link", widget: "string" }
-              - { label: "LinkText", name: "linkText", widget: "string" }
+              - { label: "Link Text", name: "linkText", widget: "string" }
               - { label: "Image", name: "image", widget: "string" }
               - { label: "Caption", name: "caption", widget: "string" }
               - { label: "Sub-Caption", name: "subCaption", widget: "string" }
@@ -159,7 +160,7 @@ collections:
               - { label: "Subtitle", name: "subtitle", widget: "string" }
               - { label: "Description", name: "description", widget: "text" }
               - { label: "Link", name: "link", widget: "string" }
-              - { label: "LinkText", name: "linkText", widget: "string" }
+              - { label: "Link Text", name: "linkText", widget: "string" }
               - { label: "Image", name: "imagePath", widget: "string" }
               - { label: "Caption", name: "imageCaption", widget: "string" }
               - { label: "Sub-Caption", name: "subCaption", widget: "string" }
@@ -182,7 +183,7 @@ collections:
               - { label: "Position", name: "reviewedByPosition", widget: "string" }
               - { label: "Organization", name: "organization", widget: "string" }
               - { label: "Link", name: "link", widget: "string" }
-              - { label: "LinkText", name: "linkText", widget: "string" }
+              - { label: "Link Text", name: "linkText", widget: "string" }
               - { label: "Image", name: "imagePath", widget: "string" }
 
       - name: "socialmedia"
