--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -1,7 +1,7 @@
 title: Testimonial Block
 items:
   - testimonial: >-
-      The people at Firebrand just really wants to make sure that their customers are satisfied. I'm looking forward to working with Lucas and the team at Firebrand again on future projects.
+      The people at Firebrand just really want to make sure that their customers are satisfied. I'm looking forward to working with Firebrand again on future projects.
     reviewedBy: Leigh W.
     position: President
     organization: Phase 3 Development, Inc.
@@ -9,7 +9,7 @@ items:
     linkText: ""
     image: /images/digital-marketing-testimonial-person.png
   - testimonial: >-
-      Working with Firebrand was positive experience. Their work was of high standard and met our expecations. Their high availabilty made working with them across timezones easy. I would hire Firebrand again for similar tasks.
+      Working with Firebrand was a positive experience. Their work was of high standard and their high availabilty made working with them across timezones easy.
     reviewedBy: Dirk S.
     position: Enterprise Architect
     organization: Visma / Active24
