Replace dummy testimonial pictures.

--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -7,7 +7,7 @@ items:
     organization: Phase 3 Development, Inc.
     link: ""
     linkText: ""
-    image: /images/digital-marketing-testimonial-person.png
+    image: /images/testimonials/phase3.leigh-w.jpg
   - testimonial: >-
       Working with Firebrand was a positive experience. Their work was of high standard and their high availabilty made working with them across timezones easy.
     reviewedBy: Dirk S.
@@ -15,7 +15,7 @@ items:
     organization: Visma / Active24
     link: ""
     linkText: ""
-    image: /images/digital-marketing-testimonial-person.png
+    image: /images/testimonials/active24.dirk-s.jpg
   - testimonial: >-
       Firebrand has done great work with us on Carsgone.com. We recommend Firebrand as a competent and valuable partner in web development.
     reviewedBy: Ray R.
