Update branding to reflect company name change to 'Blue Collar'.

--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -1,7 +1,7 @@
 title: Hero Items
 items:
   - title: >-
-      Firebrand is your trusted provider for accelerated mobile websites, apps and
+      Blue Collar is your trusted provider for accelerated mobile websites, apps and
       marketing solutions
     description: >-
       Are you looking for more engagement from your online content?  Times
