--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -16,7 +16,7 @@ services:
     linkText: Learn More
   - title: Advertising
     description: >-
-      Paid social content is fast becoming the most effective channel for connecting with qualified leads. Firebrand&rsquo;s team are experts at creating social ad campaigns, with professionally designed, chat-enabled landing pages.
+      Paid social content is fast becoming the most effective channel for connecting with qualified leads. Blue Collar&rsquo;s team are experts at creating social ad campaigns, with professionally designed, chat-enabled landing pages.
     link: /services-digital-marketing#advertising
     linkText: Learn More
   - title: SEO / SEM
