--- a/src/data/Testimonial.yml
+++ b/src/data/Testimonial.yml
@@ -1,7 +1,7 @@
 title: Testimonial Block
 items:
   - testimonial: >-
-      "The people at Firebrand just really want to make sure that their customers are satisfied. I'm looking forward to working with Firebrand again on future projects."
+      "The people at Blue Collar just really want to make sure that their customers are satisfied. I'm looking forward to working with Blue Collar again on future projects."
     reviewedBy: Leigh W.
     position: President
     organization: Phase 3 Development, Inc.
@@ -9,7 +9,7 @@ items:
     linkText: ""
     image: /images/testimonials/phase3.leigh-w.jpg
   - testimonial: >-
-      "Working with Firebrand was a positive experience. Their work was of high standard and their high availabilty made working with them across timezones easy."
+      "Working with Blue Collar was a positive experience. Their work was of high standard and their high availabilty made working with them across timezones easy."
     reviewedBy: Dirk S.
     position: Enterprise Architect
     organization: Visma / Active24
@@ -17,7 +17,7 @@ items:
     linkText: ""
     image: /images/testimonials/active24.dirk-s.jpg
   - testimonial: >-
-      "Firebrand has done great work with us on Carsgone.com. We recommend Firebrand as a competent and valuable partner in web development."
+      "Blue Collar has done great work with us on Carsgone.com. We recommend Blue Collar as a competent and valuable partner in web development."
     reviewedBy: Ray R.
     position: President
     organization: Carsgone.com
@@ -25,7 +25,7 @@ items:
     linkText: ""
     image: /images/digital-marketing-testimonial-person.png
   - testimonial: >-
-      "Firebrand designed and implemented an amazing website for our business, combining the effective elements of a solid technical design with the functionality and visual appeal to engage our customers. We've seen an immediate increase in sales and flow through business."
+      "Blue Collar designed and implemented an amazing website for our business, combining the effective elements of a solid technical design with the functionality and visual appeal to engage our customers. We've seen an immediate increase in sales and flow through business."
     reviewedBy: Greg L.
     position: Owner
     organization: Jimmy Poblanos
