--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -1,10 +1,326 @@
 title: Portfolio
 items:
-  - image: //images/ruslan-bardash-351288-unsplash.jpg
-    title: Stool
-  - image: //images/galina-n-200668-unsplash.jpg
-    title: Plants
-  - image: //images/mitchell-griest-687949-unsplash.jpg
-    title: Bags
-  - image: //images/malte-wingen-381988-unsplash.jpg
-    title: Headphone
+  #- projectName:
+  #  client:
+  #  startDate: 2019-04-09 12:00:00
+  #  endDate: 2019-04-09 12:00:00
+  #  url:
+  #  image: //images/ruslan-bardash-351288-unsplash.jpg
+  #  description: >-
+  - projectName: Procurement Services Division Time Machine Pilot
+    client: AOT Technologies / Government of British Columbia
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      The Ministry of Citizens' Services, Procurement Services Division's TimeMachine system is an operationally
+      critical application that provides time tracking and project information to support the Procurement Services
+      Division’s billing processes.
+  - projectName: Ideal Automotive Finance Solutions
+    client: Interdynamix
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Ideal is a automotive fintech startup (incubated in-house by a company called Interdynamix) whose main
+      product offering is a SaaS-style machine-learning enhanced Business Intelligence platform for automotive
+      inventory holders, retailers, and lenders. Each platform ‘pod’ consists of a custom hybrid client-side app
+      which communicates using RESTful APIs with headless web API service instances representing the inventory
+      holders, retailers, and lenders to a particular organization. The distributed backends (API) are written
+      in Java using Spring Boot and Hibernate, and communicate with each other using RabbitMQ message broker
+      software; information is stored in PostgreSQL databases. SSO-style authentication is handled using Red
+      Hat’s Keycloak.
+  - projectName: VEST Tablet & Kiosk Apps
+    client: Video Entertainment Systems Technology Ltd.
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Video Systems Entertainment Technology (VEST) is an Edmonton company that provides self-serve program
+      kiosks to (horse/harness/greyhound) racetracks and off-track-betting sites in Canada, the US and the
+      Caribbean. Some of the products offered on the kiosks are full programs, profile sheets, singles races and
+      IP sheets.
+  
+      At the behest of the LSE-listed (London Stock Exchange) Sportech PLC – one of VEST’s clients – I was
+      contracted to develop a hybrid mobile application for deployment on tablets, Linux kiosks and smart
+      televisions which replicates (and furthers) the functionality available in their existing kiosk system.
+      These tablets are currently being deployed in multiple off-track-betting locations in the continental USA.
+  - projectName: Caffe Tech Data Bridge
+    client: Caffe Tech 2004 Ltd.
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Caffe Tech is an Edmonton based importer and distributor of premium (primarily Italian and Swiss)
+      commercial and home coffee equipment which provides many popular Albertan establishments with their
+      restaurant and coffee making equipment.
+
+      As Caffe Tech was expanding their business and opening multiple new locations, they needed an inventory
+      management solution that would synchronize their QuickBooks Desktop / Online customers, inventory and
+      stock levels, invoices, work orders and more with their existing e-commerce websites (Caffe Tech, Leva,
+      ACE Coffee Roasters). I designed an event-driven software bridge, composed of an OAuth2 secured RESTful
+      micro-service, and custom ‘client’ extensions for Magento and OpenCart, that automatically handled
+      synchronization of all data across multiple installations and software systems using a combination of PHP,
+      Slim, Doctrine ORM/DBAL, MySQL and the QuickBooks Online API and Desktop SDK.
+  - projectName: Phobulous Restaurant Website
+    client: Phobulous Noodle House
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      I designed a custom SPA-style mobile-friendly Asian-styled theme for their website featuring CSS
+      animations and a custom menu component. A customized build of OpenCart is used on the backend for content
+      and product management.
+  - projectName: Leva Website
+    client: Caffe Tech / Cafe Leva
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      I designed a custom SPA-style mobile-friendly Mexican-styled theme for their website featuring completely
+      custom artwork, parallax scrolling effects and a custom menu component. A customized build of OpenCart is
+      used on the backend for content and product management.
+  - projectName: Jimmy Poblanos Food Truck Website
+    client: Jimmy Poblano's Mexican Cantina
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      I designed a custom SPA-style mobile-friendly Mexican-styled theme for their website featuring completely
+      custom artwork, parallax scrolling effects and a custom menu component. A customized build of OpenCart is
+      used on the backend for content and product management.
+  - projectName: Corrpro Corrosion Reporting Application
+    client: Corrpro (Canada)
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Corrpro provides corrosion control materials and services including - engineering, pipeline integrity,
+      construction and protective coating inspection - throughout North America, Europe, the Middle East and
+      South Africa. I designed and developed a custom Windows Desktop application to help track corrosion levels
+      of pipelines and storage tanks at thousands of industrial locations across Alberta.
+  - projectName: Challenger Fleet Management System
+    client: Challenger Fleet Management Solutions
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Challenger Fleet Management Solutions specializes in long term vehicle rentals for industrial projects.
+      I architected, designed and spearheaded the development of a custom fleet-management application which
+      served to streamline business processes including tracking vehicle inventory, coordinating the equipment
+      of vehicles with specialized accessories required for industrial projects, coordinating deliveries on or
+      before the time vehicle units are required on site, monitoring manufacturer recall programs, invoicing and
+      basic accounting, and the generation of customized reports to clients while vehicle units are on rent.
+  - projectName: Caffe Tech Magento Store
+    client: Caffe Tech 2004 Ltd.
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Caffe Tech is an Edmonton based importer and distributor of premium (primarily Italian and Swiss)
+      commercial and home coffee equipment which provides many popular Albertan establishments with their
+      restaurant and coffee making equipment.
+
+      I designed a custom theme and a suite of custom extensions for Magento including a custom payment
+      extension for Global Payments (Canada) and a shipping extension for Purolator’s Shipping API (SOAP)
+      featuring item tracking, support for multiple items per package, label printing, international documents
+      generation, and automatically scheduled package pickups.
+  - projectName: AgentView Insurance Policy Management System
+    client: Alberta Motor Association
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      The Alberta Motor Association was looking to replace its legacy and end-of-life ‘FrontTier’ insurance
+      policy management system with an in-house, web-based application and backend service network.
+
+      I spearheaded the overhaul of AMA’s web-based AgentView insurance management system and the network of
+      .NET Web API and WCF services that supports it. The scope of work involved a complete rewrite of
+      AgentView’s client and server applications as well as complete UI redesign (a previous external contractor
+      had failed). I was also responsible for UI/UX design related to internal and external web-based
+      applications.
+  - projectName: Home Insurance Quote Web Application
+    client: Alberta Motor Association
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      The Alberta Motor Association needed a new web-based and mobile friendly system to provide customers with
+      customized home and tenant insurance quotes. The new application replaced their legacy web application,
+      developed in C# using ASP.NET Web Forms, which was not mobile friendly.
+
+      I designed and developed a new web application consisting of a responsive, mobile-friendly JavaScript
+      client and a ASP.NET Web API backend, re-using code for certain procedures, functions and business logic
+      where possible.
+  - projectName: Auto Insurance Quote Web Application
+    client: Alberta Motor Association
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      The Alberta Motor Association needed a new web-based and mobile friendly system to provide customers with
+      customized automobile insurance quotes. The new application replaced their legacy web application,
+      developed in C# using ASP.NET Web Forms, which was not mobile friendly.
+
+      I designed and developed a new web application consisting of a responsive, mobile-friendly JavaScript
+      client and a ASP.NET Web API backend, re-using code for certain procedures, functions and business logic
+      where possible.
+  - projectName: Carsgone.com
+    client: Carsgone (Magazine)
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      CarsGone is an Edmonton-based, nationally spanning automotive classifieds magazine and website with a
+      print distribution network across Alberta and Ontario. At the time, they had over 90,000 vehicles from
+      over 600 dealerships listed on their website.
+
+      I created an online marketplace/classifieds site for listing vehicles serving independent buyers and
+      sellers as well as hundreds of dealerships across Canada. Vehicle listings were either posted by end-users
+      or aggregated using data providers from organizations including Strathcom Media and Boost Motor Group for
+      display.
+  - projectName: Spasation Website and Online Store
+    client: Spasation
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Spasation is an Alberta-based chain of spas/salons. Uses a customized build of OpenCart for content and product
+      management.
+  - projectName: RMG Selection Recruitment Portal v3
+    client: RMG Selection
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      RMG Selection is an award-winning, China-focused international recruitment and HR consultancy business with over
+      30 offices around the world. I designed, developed and helped maintain the RMG Selection’s HR recruitment website
+      for over 6 years. This 2014 rebuild of the site was the winner of the ‘Best Job Board’ award at the 2014 Global
+      Recruiter Asia Pacific Awards ceremony in Singapore.
+  - projectName: Product Matrix WordPress Extension
+    client: Active24
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Active 24 is an independent pan-European provider of Internet hosting services. The company focuses on providing
+      small and medium-sized companies and private individuals with hosted solutions that combine scalable and
+      standardized products.
+  - projectName: ExtremeAudio E-Commerce Website
+    client: SoftControl
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Founded in Bangkok in 1993 by a team of German and Thai entrepreneurs, SoftControl delivers IT services and
+      solutions to more than 200 local and international customers including small and medium size companies as well as
+      enterprise level businesses. SoftControl is a Microsoft Gold solutions partner.
+  
+      I developed a custom Magento theme and several Magento extensions for product display, inventory management and
+      administration. I also assisted with QA testing and debugging of (other) Magento e-commerce installations.
+  - projectName: Online Affiliate Portal
+    client: Xtend-Life
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Developed a business card publishing plugin for WordPress CMS with features including AJAX WYSIWYG editing,
+      custom file upload and placement, live style editing, adjustable print resolution output, image processing via GD
+      or Imagick, and export to major publishing formats including TIFF, EPS and PDF.
+  - projectName: MyFoneRecycle E-Commerce Website
+    client: Smart Traffic/Smart Site
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
+  - projectName: Gorilla Print UK E-Commerce Website
+    client: Smart Traffic/Smart Site
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
+      Customizations include a one-step checkout system as well a publishing plugin for OpenCart with features including
+      AJAX WYSIWYG editing, custom file upload and placement, live style editing, adjustable print resolution output,
+      image processing via GD or Imagick, and export to major publishing formats including TIFF, EPS and PDF.
+  - projectName: Wholesale Silver Jewelry E-Commerce Website
+    client: Smart Traffic/Smart Site
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Designed and implemented a custom e-commerce theme and several extensions for the OpenCart e-commerce system.
+      Customizations include a one-step checkout system as well as a custom payment extension for ‘Thai e-Payments’.
+  - projectName: BincVFX Website and Asset Management System
+    client: Nfineon
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      BincVFX was a boutique visual effects studio in Bangkok, Thailand. I designed a custom website that integrated
+      with their custom asset management platform, which was largely based on a project I helped contribute to called
+      the TACGA (Thai Animation and Computer Graphics Association) Media Management System.
+  - projectName: Kantana Animation Studios Website
+    client: Nfineon
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      Kantana PCL (Public Company Limited) is Thailand's largest media organization. I was contracted to redesign their
+      animation studio’s website to correspond with the release of Khan Kluay 2 (a domestic CG movie featuring a family
+      of elephants). I designed a custom theme and several custom extensions for Joomla CMS, including extensions for
+      managing photo/video assets.
+  - projectName: R1 Club Website
+    client: Nfineon
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      R1 Club was a membership-based luxury vehicle/yacht rental club in Thailand, Malaysia and Singapore. I designed a
+      custom theme and several custom extensions for Joomla CMS, including extensions for managing photo/video assets,
+      and a custom-made membership component.
+  - projectName: LUXE Galleria Website
+    client: Nfineon
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      LUXE was a membership-based publication targeting haute-couture in South East Asia. I designed a custom theme and
+      several custom extensions for Joomla CMS, including extensions for managing photo/video assets, and a custom-made
+      membership component.
+  - projectName: Bangkok International Film Festival 2008 Website
+    client: Nfineon
+    startDate: 2019-04-09 12:00:00
+    endDate: 2019-04-09 12:00:00
+    url:
+    image: //images/ruslan-bardash-351288-unsplash.jpg
+    description: >-
+      I designed a custom theme and several custom extensions for Joomla CMS, including extensions for managing
+      photo/video assets.
