Replace enterprise apps on home page with landing pages.

--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -14,7 +14,7 @@ services:
       We work with you to deliver a professionally designed accelerated mobile website, with landing pages, lead-gen fields, and your company&rsquo;s branding built in. Your website is optimized for mobile usage, but works on desktop as well.
     link: /services-custom-software
     linkText: Learn More
-  - title: Enterprise Applications
+  - title: Landing Pages
     description: >-
       We work with you to deliver a professionally designed accelerated mobile website, with landing pages, lead-gen fields, and your company&rsquo;s branding built in. Your website is optimized for mobile usage, but works on desktop as well.
     link: /services-custom-software
