--- a/src/data/Home.yml
+++ b/src/data/Home.yml
@@ -26,7 +26,7 @@ services:
     linkText: Learn More
   - title: Landing Pages
     description: >-
-      We work with you to deliver a professionally designed accelerated mobile website, with landing pages, lead-gen fields, and your company&rsquo;s branding built in. Your website is optimized for mobile usage, but works on desktop as well.
+      We work with you to deliver a professionally designed accelerated landing pages complete with lead-gen fields, and your company&rsquo;s branding built in. Your landing pages are optimized for mobile usage, but work on desktop as well.
     link: /services-landing-pages
     linkText: Learn More
   - title: Social Media
