--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -1,16 +1,21 @@
 title: Hero Items
 items:
-  - title: >-
-      Blue Collar is your trusted provider for mobile websites, progressive or hybrid apps and
-      custom software
+  - id: homepage-hero
+    title: >-
+      We’re about software. Software is about people.
     description: >-
-      Are you looking for more engagement from your online content?  Times
-      have changed &ndash; providing superior mobile and in-app social media
-      experiences is now more important than linking back to traditional
-      websites.  We specialize in ultra-fast mobile-optimized pages, helping you
-      to engage with the right clients and convert more leads!
-    id: homepage-hero
+      We’re proud to be small and based in Victoria, BC. We’re located right downtown  - home of great startups and great coffee.
     image: /images/banners/responsive-banner-jimmy-poblanos.png
+    link: "/#services"
+    linkText: Learn More
+    caption:
+    subCaption:
+  - id: services-hero
+    title: >-
+      Applications crafted with precision and care
+    description: >-
+      Building beautiful, usable, fast and scalable applications is our thing. We help growing companies with...
+    image: /images/portfolio/bc-showcase-app-quickcommerce.png
     link: "/#services"
     linkText: Learn More
     caption:
