--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -4,20 +4,30 @@ items:
     title: >-
       We’re about software. Software is about people.
     description: >-
-      We’re proud to be small and based in Victoria, BC. We’re located right downtown  - home of great startups and great coffee.
+      We have a long history of designing and developing amazing experiences for iOS, Android, and Responsive Web. We’re a team of industry leading experts who create solutions and build applications using cutting edge technology to help your business succeed. We love what we do and it shows in our work.
     image: /images/banners/responsive-banner-jimmy-poblanos.png
-    link: "/#services"
-    linkText: Learn More
+    link: "/company"
+    linkText: Our Story
     caption:
     subCaption:
   - id: services-hero
     title: >-
       Applications crafted with precision and care
     description: >-
-      Building beautiful, usable, fast and scalable applications is our thing. We help growing companies with...
+      Building beautiful, usable, fast and scalable applications is our thing. Drawing on deep experience in solution design and combining it with great listening, we work closely with your team to define a solution for the business challenge at hand. Then, we infuse user feedback and priorities into every stage of the software development process.
     image: /images/portfolio/bc-showcase-app-quickcommerce.png
-    link: "/#services"
+    link: "/services"
     linkText: Learn More
+    caption:
+    subCaption:
+  - id: projects-hero
+    title: >-
+      Customers love our work
+    description: >-
+      Every app is a collection of details, priorities, and tradeoffs, built on some core principles about what makes for a great experience. We collectively have over 150 years of experience, and we use it to make each new app shine.
+    image: /images/portfolio/bc-showcase-responsive.png
+    link: "/projects"
+    linkText: Browse Projects
     caption:
     subCaption:
 
