Fix TimeMachine image.

--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -12,7 +12,7 @@ items:
     startDate: 2019-03-01 12:00:00
     endDate: 2019-04-01 12:00:00
     url:
-    image: /images/portfolio/bc-showcase-app-timemachine.pngx`
+    image: /images/portfolio/bc-showcase-app-timemachine.png`
     description: >-
       The Ministry of Citizens' Services, Procurement Services Division's TimeMachine system is an operationally
       critical application that provides time tracking and project information to support the Procurement Services
